# img-compress

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WASM_ARCHITECTURE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
cli/: build.mjs  index.ts  polyfill.ts
rust/img-ops/: Cargo.toml
rust/img-ops/.cargo/: config.toml
rust/img-ops/src/: lib.rs
src/: App.vue  main.ts
src/assets/: main.css
src/components/: ImagePreview.vue  ImageUpload.vue  LanguageSwitcher.vue
src/core/: compress.ts  types.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/services/: compressionService.ts  downloadService.ts  imageOps.ts  smartCompressor.ts  wasmCodecLoader.ts
src/styles/: globals.css
src/types/: image.ts
src/views/: HomeView.vue
src/wasm/img-ops/: img_ops.d.ts  img_ops.js  img_ops_bg.wasm  img_ops_bg.wasm.d.ts  package.json
src/workers/: imageCompression.ts
